--- a/txrx/static/less/bootstrap/less/variables.less
+++ b/txrx/static/less/bootstrap/less/variables.less
@@ -697,7 +697,7 @@
 //
 //##
 
-@well-bg:                     #f5f5f5;
+@well-bg:                     #e3e8e8;
 @well-border:                 darken(@well-bg, 7%);
 
 
