--- a/txrx/static/less/bootstrap/less/wells.less
+++ b/txrx/static/less/bootstrap/less/wells.less
@@ -6,12 +6,11 @@
 // Base class
 .well {
   min-height: 20px;
-  padding: 19px;
+  padding: 5px;
   margin-bottom: 20px;
   background-color: @well-bg;
   border: 1px solid @well-border;
-  border-radius: @border-radius-base;
-  .box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
+  border-radius: 0;
   blockquote {
     border-color: #ddd;
     border-color: rgba(0,0,0,.15);
