styling started for course index

--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -1,22 +1,23 @@
 {% if session.section.fee %}
-<span class="EnrollLink">
+<div class="price">${{ session.section.fee }}</div>
+<div class="EnrollLink">
   {% if session.user_enrollment.quantity == 1 %}
   ENROLLED
   {% elif session.user_enrollment %}
   ENROLLED x {{ session.user_enrollment.quantity }}
   {% elif session.closed %}
-  {{ session.closed_string }} (${{ session.section.fee }})
+  {{ session.closed_string }}
   {% elif session.full %}
-  FULL (${{ session.section.fee }})
+  FULL
   {% else %}
   <button class="btn btn-success add" onclick="addClass({{ session.id }});">
-    {% if session.in_progress %}In Progress{% else %}Enroll{% endif %} ${{ session.section.fee }}</button>
+    {% if session.in_progress %}In Progress{% else %}Enroll{% endif %}</button>
   <button class="btn btn-success drop" onclick="addClass({{ session.id }});" title="double enroll">
     +1 Person</button>
   <button class="btn btn-danger drop" onclick="simpleCart.remove('{{ session.id }}'); toggleCourses();">
-    Drop ${{ session.section.fee }}</button>
+    Drop</button>
   {% endif %}
-</span>
+</div>
 <script>
   window.SESSIONS_ON_PAGE = window.SESSIONS_ON_PAGE || {};
   window.SESSIONS_ON_PAGE[{{ session.id }}] = {
@@ -25,7 +26,8 @@
   };
 </script>
 {% else %}
-<span class="RsvpLink{% if session.user_enrollment %} attending{% endif %}">
+<div class="price">FREE</div>
+<div class="RsvpLink{% if session.user_enrollment %} attending{% endif %}">
   {% if session.archived %}
   CLOSED
   {% elif request.user %}
@@ -33,7 +35,7 @@
   <div class="number_attending unrsvp">RSVP'd x {{ session.user_enrollment.quantity }}</div>
   <div class="rsvp">Not Attending</div>
   <button class="btn btn-primary rsvp" onclick="rsvp({{ session.id }},'{{ session.get_rsvp_url }}');">
-    RSVP $0</button>
+    RSVP</button>
   <button class="btn btn-primary unrsvp not_full" title="Bring a friend!"
           onclick="rsvp({{ session.id }},'{{ session.get_rsvp_url }}?plus_one=1');">+1 Person</button>
   <button class="btn btn-danger unrsvp" onclick="rsvp({{ session.id }},'{{ session.get_rsvp_url }}?drop=1');">
@@ -44,5 +46,5 @@
   <a href="/accounts/login/?next={{ session.get_absolute_url|urlencode }}">Login</a>
   to RSVP
   {% endif %}
-</span>
+</div>
 {% endif %}
