--- a/course/templates/course/_session_row.html
+++ b/course/templates/course/_session_row.html
@@ -1,30 +1,38 @@
 {% load url from future %}
-{% load txrx_tags thumbnail %}
-<tr id="c{{session.id}}" class="course filterable{% if session.full %} full{% endif %}"
+{% load txrx_tags thumbnail crop_util %}
+<div id="c{{session.id}}" class="course filterable well {% if session.full %} full{% endif %}"
     data-subject="{% for subject in session.subjects %}{{ subject }},{% endfor %}"
-    {%if not session.course.closed%}data-open{%endif%}
+    {% if not session.course.closed %}data-open{% endif %}
     data-date="{{ session.starttime|date:"Ymd" }}">
-  <td class="enroll-cell">
-    {% include "course/_enroll_link.html" %}
-  </td>
-  <td class="info-cell">
-    {% if session.branding %}
-    {% thumbnail session.branding.get_small_image "150x40" as im %}
-    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" style="float:right" />
+  <div class="picture">
+    {% thumbnail session.first_photo|get_override:"landscape_crop" "120x80" crop="center" as im %}
+    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
     {% endthumbnail %}
-    {% endif %}
-    <a href="{% url "course:detail" session.slug %}">
-      {% if not session.section.fee %}Free: {% endif %}{{ session.section.course }}
-    </a>
-    <div class="lower"><small>
+  </div>
+  <div class="details">
+    <a href="{% url "course:detail" session.slug %}" class="title">
+      {% if session.branding %}
+      {% thumbnail session.branding.get_small_image "150x40" crop="center" as im %}
+      <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
+           style="float:left;margin: 5px 10px 0 0;" />
+      {% endthumbnail %}
+      {% endif %}
+      {{ session.section.course }}</a>
+    <div class="dates"><small>
         {{ session.get_short_dates }}
         with <a href="{% url "instructor_detail" session.user.username %}">
           <i class="icon-user"></i>{{ session.get_instructor_name|noemail }}</a>
     </small></div>
-  </td>
-  <td class="note-cell">
-    {% for note,title in session.section.get_notes %}
-    <small class="has_notes" data-tooltip="{{ title }}"><span>{{ note }}</span></small>
-    {% endfor %}
-  </td>
-</tr>
+    <div class="bottom">
+      {% for subject in session.section.course.subjects.all %}
+      {{ subject|upper }}
+      {% endfor %}
+      {% for note,title in session.section.get_notes %}
+      <small class="has_notes" data-tooltip="{{ title }}"><span>{{ note }}</span></small>
+      {% endfor %}
+    </div>
+  </div>
+  <div class="CartBox">
+    {% include "course/_enroll_link.html" %}
+  </div>
+</div>
