--- a/txrx/static/less/base.less
+++ b/txrx/static/less/base.less
@@ -1,5 +1,6 @@
-@import "bootstrap/less/bootstrap.less";
+@import "bootstrap/less/variables.less";
 @import "colors.less";
 @import "txrx.less";
 @import "thing.less";
 @import "slideshow.less";
+@import "course.less";
