--- a/txrx/templates/_styles.html
+++ b/txrx/templates/_styles.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}wmd/wmd.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}less/codrspace.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}mptt_comments/css/mptt_comments.css" />
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/bootstrap/less/bootstrap.less">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less">
 {% endcompress %}
 
