--- a/membership/templates/membership/join-us.html
+++ b/membership/templates/membership/join-us.html
@@ -23,54 +23,58 @@ function setHiddenFields(that) {
 <div class="clear"></div>
 <h2>There are 4 membership levels to choose from:</h2>
 <br />
-{% for m in memberships %}
-<span class="span5 well">
-  <h2>
-    {{ m.name }}
-    <small>{% if forloop.last %}Starting at {% endif %}${{ m.monthly_rate.cost }}/month</small>
-  </h2>
-  {% if m.notes %}<br />
-  {{ m.notes|safe }}{% endif %}
-  <ul class="membership_features">
-    {% for f in m.feature_set.all %}
-    <li>
-      <i class="icon-ok"></i>
-      {{ f.text }}
-    </li>
-    {% endfor %}
-  </ul>
-  <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-    <input type="hidden" name="cmd" value="_xclick-subscriptions">
-    <input type="hidden" name="business" value="txrxlabs@gmail.com">
-    <input type="hidden" name="no_shipping" value="1">
-    <input type="hidden" name="on0" value="{{ m.name }}">
-    <input type="hidden" name="a3" value="">
-    <input type="hidden" name="p3" value="">
-    <input type="hidden" name="t3" value="M">
-    <input type="hidden" name="src" value="1">
-    <input type="hidden" name="sra" value="1">
-    <select name="os0" onchange="setHiddenFields(this);">
-      {% for rate in m.rates %}
-      <option value="{{ m.name }} - {{ rate.description }}">{{ rate.description }}</option>
+<div id="memberships">
+  {% for m in memberships %}
+  <span class="well membership">
+    <h2>
+      {{ m.name }}
+      <small>{% if forloop.last %}Starting at {% endif %}${{ m.monthly_rate.cost }}/month</small>
+    </h2>
+    {% if m.notes %}<br />
+    {{ m.notes|safe }}{% endif %}
+    <ul class="membership_features">
+      {% for f in m.feature_set.all %}
+      <li>
+        <i class="icon-ok"></i>
+        {{ f.text }}
+      </li>
       {% endfor %}
-    </select>
-    <input type="hidden" name="currency_code" value="USD">
-    <input type="hidden" name="RETURNURL" value="{{ settings.SITE_URL }}/joined/{{ user.id }}/">
-    <input type="image" name="submit" alt="PayPal - The safer, easier way to pay online!"
-	   src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_LG.gif">
-    <img src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" alt="" width="1" height="1" border="0">
-  </form>
-</span>
+    </ul>
+    <form name="_xclick" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_xclick-subscriptions">
+      <input type="hidden" name="business" value="txrxlabs@gmail.com">
+      <input type="hidden" name="no_shipping" value="1">
+      <input type="hidden" name="on0" value="{{ m.name }}">
+      <input type="hidden" name="a3" value="">
+      <input type="hidden" name="p3" value="">
+      <input type="hidden" name="t3" value="M">
+      <input type="hidden" name="src" value="1">
+      <input type="hidden" name="sra" value="1">
+      <select name="os0" onchange="setHiddenFields(this);">
+        {% for rate in m.rates %}
+        <option value="{{ m.name }} - {{ rate.description }}">{{ rate.description }}</option>
+        {% endfor %}
+      </select>
+      <input type="hidden" name="currency_code" value="USD">
+      <input type="hidden" name="RETURNURL" value="{{ settings.SITE_URL }}/joined/{{ user.id }}/">
+      <div class="button_box">
+        <input type="image" name="submit" alt="PayPal - The safer, easier way to pay online!"
+	       src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_LG.gif">
+        <img src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" alt="" width="1" height="1" border="0">
+      </div>
+    </form>
+  </span>
 
-<script type="text/javascript">
-{% for rate in m.rates %}
-membership_form_parameters['{{ m.name }} - {{ rate.description }}'] = {
-  'cost': {{ rate.cost }},
-  'months': {{ rate.months }}, // "wait this many months between billings"
-}
-{% endfor %}
-</script>
-{% endfor %}
+  <script type="text/javascript">
+    {% for rate in m.rates %}
+    membership_form_parameters['{{ m.name }} - {{ rate.description }}'] = {
+    'cost': {{ rate.cost }},
+    'months': {{ rate.months }}, // "wait this many months between billings"
+    }
+    {% endfor %}
+  </script>
+  {% endfor %}
+</div>
 <script type="text/javascript">
 $(document).ready(function() {$("select").change()});
 </script>
