another daily style push

--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -2,18 +2,23 @@
 <script type="text/javascript">
 simpleCart.email = "{{ settings.PAYPAL_RECEIVER_EMAIL }}";</script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/cart.js"></script>
-<h3 class="block_title">Shopping Cart</h3>
-<div id="cart" class="well">
-  <div id="cartEmpty">Your cart is empty</div>
-  <div class="simpleCart_items"></div>
-  <div class="checkout-box">
-    Total: <span class="simpleCart_finalTotal"></span>
+<div id="cart">
+  <h3 class="block_title">Shopping Cart</h3>
+  <div class="well">
+    <div id="cartEmpty">Your cart is empty</div>
+    <div class="simpleCart_items"></div>
+    <div class="checkout-box">
+      Total: <span class="simpleCart_finalTotal"></span>
+    </div>
+    <div style="text-align: center;">
+      <a href="javascript:;"
+         onclick="createCookie('checkout_initiated','yes!',10);simpleCart.checkout(); return false">
+        <img src="{{ STATIC_URL }}img/paypal.png"></a>
+    </div>
   </div>
-  <div style="text-align: center;">
-    <a href="javascript:;"
-       onclick="createCookie('checkout_initiated','yes!',10);simpleCart.checkout(); return false">
-      <img src="{{ STATIC_URL }}img/paypal.png"></a>
-  </div>
+</div>
+<div class="visible-xs hidden-sm hidden-md hidden-lg">
+  <div id="mobileCart"><a href="#cart">View Cart</a></div>
 </div>
 {% comment %}
 <div class="well accordion" id="cart">
