--- a/txrx/static/less/slideshow.less
+++ b/txrx/static/less/slideshow.less
@@ -1,18 +1,18 @@
 .slideshow {
+  max-width: 600px;
   .active_slide {
-    max-width: 600px;
     margin: 0 auto;
     img { height:auto; width: 100%; }
   }
   .slide-nav {
+    margin: 5px -5px 0;
     min-height: 10px;
-    padding: 0 20px;
     position: relative;
     overflow: hidden;
     a {
       float: left;
       width: 20%;
-      img { height: auto; padding: 10px; width: 100%; }
+      img { height: auto; padding: 5px; width: 100%; }
     }
     .next, .prev {
       background: @well-bg;
