--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -25,6 +25,7 @@ section { padding-bottom: 25px; }
 }
 /* txrx overrides */
 body { color: #424242; margin: 0 auto 50px; max-width: 1400px; overflow: scroll; }
+html, body { overflow-x: hidden; }
 #wrap { margin: 0 55px; }
 @media (max-width: @screen-sm-max) { #wrap { margin: 0 20px; } }
 @media (max-width: @screen-xs-max) { #wrap { margin: 0; } }
@@ -80,7 +81,16 @@ form label.required {
   font-weight: bold;
 }
 
-#bot_right { position: fixed; bottom: 0px; left: 0px; padding: 3px 6px; border: double 4px; background: white; }
+#bot_right,#mobileCart {
+  background: white;
+  border: double 4px;
+  bottom: 0px;
+  padding: 3px 6px;
+  position: fixed;
+  z-index: 100;
+}
+#mobileCart { right: 0; }
+#bot_right { left: 0px; }
 
 /* tools */
 #labs {
@@ -188,7 +198,7 @@ label .help-text {
 }
 
 .itemName {
-  width: 245px;
+  padding-right: 15px;
   font-size: 12px;
 }
 
@@ -402,7 +412,7 @@ h3.date {
 
 #comments {
   h2 { margin: 20px 0 5px; }
-  textarea { height: 150px; width: 350px; }
+  textarea { height: 150px; max-width: 100%; width: 350px; }
 }
 
 #mptt-comments-tree {
@@ -545,62 +555,3 @@ h3.date {
 
 p.error { color: red; } /* currently only used on login form */
 ul.errorlist { color: red; }
-
-.FeaturedThings {
-  .thing {
-    float: left;
-    padding: 0 15px;
-  }
-  a {
-    display: block;
-    height: 100%;
-    margin-bottom: 15px;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    z-index: 0;
-    .title {
-      background: #222;
-      background: rgba(32,32,32,0.8);
-      bottom: -50px;
-      color: white;
-      left: 0;
-      opacity: 0;
-      padding: 3px 5px 3px;
-      position: absolute;
-      width: 100%;
-      .author { font-size: 0.8em; }
-    }
-    &:hover {
-      z-index: 1;
-      .title { bottom: 0; opacity: 1; .transition(bottom 0.25s linear); }
-    }
-  }
-  img {
-    max-width: 100%;
-  }
-}
-
-@media (max-width:599px) {
-  #main { margin: 0; padding: 0; }
-  .FeaturedThings .thing {
-    width: 50%;
-    padding: 0 10px;
-    a { margin-bottom: 10px; }
-  }
-}
-@media (min-width:600px) { .FeaturedThings .thing { width: 100/3%; } }
-@media (min-width:990px) { .FeaturedThings .thing { width: 25%; } }
-
-.recent_blogs {
-  img { height: auto; margin-bottom: 10px; max-width: 100%; }
-  a {
-    color: inherit;
-    &:hover { text-decoration: none; }
-  }
-  .title {
-    font-size: 18px;
-    height: 3.9em;
-    line-height: 1.3;
-  }
-}
