--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>{% block full_title %}{% block title %}{% endblock %} - {{ SITE_NAME }}{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     {% block extra_head %}{% endblock %}
     {% include "_styles.html" %}
     <script type="text/javascript">
