--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -27,7 +27,7 @@
   <h3 class="block_title">Recent Blogs</h3>
   {% for post in posts %}
   {% thumbnail post.photo|get_override:"landscape_crop" "300x200" crop="center" as im %}
-  <div class="post col-xs-4">
+  <div class="blog_well col-xs-6 col-md-4">
     <div class="well">
       <a href="{{ post.get_absolute_url }}">
         <img src="{{ im.url }}" width="300" height="200" />
