--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -9,6 +9,7 @@
 }
 
 .course .picture {
+  background: url(/media/cache/02/75/0275fb4e1e0b6380a86fcafab0bb645a.jpg);
   height: 80px;
   left: 5px;
   position: absolute;
@@ -78,7 +79,7 @@
   .subjects { padding-bottom: 5px; }
   .CartBox {
     position: absolute;
-    right: 0;
+    right: @grid-gutter-width/2;
     top: 0;
     z-index: 1;
   }
