--- a/txrx/templates/flatpages/default.html
+++ b/txrx/templates/flatpages/default.html
@@ -2,7 +2,7 @@
 {% load codrspace_tags thumbnail %}
 
 {% block full_title %}{{ flatpage.title }}{% endblock %}
-{% block header_content %}{{ flatpage.title }}{% endblock %}
+{% block header %}{% endblock %}
 
 {% block content %}
 <div id="flatpage">
