--- a/txrx/static/less/home.less
+++ b/txrx/static/less/home.less
@@ -1,4 +1,4 @@
-.FeaturedThings {
+.FeaturedThings,.thing_index {
   .thing {
     float: left;
     padding: 0 15px;
@@ -11,38 +11,57 @@
     position: relative;
     width: 100%;
     z-index: 0;
-    .title {
-      background: #222;
-      background: rgba(32,32,32,0.8);
-      bottom: -50px;
-      color: white;
-      left: 0;
-      opacity: 0;
-      padding: 3px 5px 3px;
-      position: absolute;
-      width: 100%;
-      .author { font-size: 0.8em; }
-    }
-    &:hover {
-      z-index: 1;
-      .title { bottom: 0; opacity: 1; .transition(bottom 0.25s linear); }
-    }
   }
  img {
     max-width: 100%;
   }
 }
+.FeaturedThings a { /*home behavior */
+  .title {
+    background: #222;
+    background: rgba(32,32,32,0.8);
+    bottom: -50px;
+    color: white;
+    left: 0;
+    opacity: 0;
+    padding: 3px 5px 3px;
+    position: absolute;
+    width: 100%;
+    .author { font-size: 0.8em; }
+  }
+  &:hover {
+    z-index: 1;
+    .title { bottom: 0; opacity: 1; .transition(bottom 0.25s linear); }
+  }
+}
+
+.thing_index a { /* index behavior */
+  color: inherit;
+  &:hover { text-decoration: none; }
+  .title {
+    height: 2.8em;
+    overflow: hidden;
+  }
+  .author { font-size: 0.9em }
+}
+
+.thing_index {
+  min-height: 10px;
+  overflow: hidden;
+}
 
 @media (max-width:599px) {
   #main { margin: 0; padding: 0; }
-  .FeaturedThings .thing {
-    width: 50%;
-    padding: 0 10px;
-    a { margin-bottom: 10px; }
+  .FeaturedThings,.thing_index {
+    .thing {
+      width: 50%;
+      padding: 0 10px;
+      a { margin-bottom: 10px; }
+    }
   }
 }
-@media (min-width:600px) { .FeaturedThings .thing { width: 100/3%; } }
-@media (min-width:990px) { .FeaturedThings .thing { width: 25%; } }
+@media (min-width:600px) { .FeaturedThings,.thing_index { .thing { width: 100/3%; } } }
+@media (min-width:990px) { .FeaturedThings,.thing_index { .thing { width: 25%; } } }
 
 .recent_blogs {
   .blog_well { max-width: 320px; }
