--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -37,6 +37,7 @@ header, #main {
 h1.page_title {
   border-bottom: 2px solid;
   line-height: 37px;
+  margin-bottom: 10px;
   padding-right: 120px;
 }
 
@@ -53,6 +54,12 @@ h3.block_title {
     padding-top: 10px;
     text-align: right;
   }
+}
+
+#flatpage > iframe {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
 }
 
 #memberships {
@@ -409,6 +416,11 @@ h3.date {
 }
 
 /* comments */
+h2.section_title {
+  background: @well-bg;
+  font-size: 18px;
+  padding: 0 10px;
+}
 
 #comments {
   h2 { margin: 20px 0 5px; }
