another round of styling

--- a/course/templates/course/_session_row.html
+++ b/course/templates/course/_session_row.html
@@ -4,11 +4,11 @@
     data-subject="{% for subject in session.subjects %}{{ subject }},{% endfor %}"
     {% if not session.course.closed %}data-open{% endif %}
     data-date="{{ session.starttime|date:"Ymd" }}">
-  <div class="picture">
+  <a href="{% url "course:detail" session.slug %}" class="picture">
     {% thumbnail session.first_photo|get_override:"landscape_crop" "120x80" crop="center" as im %}
     <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
     {% endthumbnail %}
-  </div>
+  </a>
   <div class="details">
     <a href="{% url "course:detail" session.slug %}" class="title">
       {% if session.branding %}
