--- a/txrx/templates/_side.html
+++ b/txrx/templates/_side.html
@@ -2,7 +2,7 @@
 {% load url from future %}
 
 <section>
-  <h3 class="block_title">Introduction</h3>
+  <h3 class="block_title">About TX/RX Labs</h3>
   <p>
     Established in 2007, TX/RX Labs is a non-profit hackerspace for the greater Houston area.
     Housed in the East End District, we offer courses in and access to our rapid prototyping lab,
