--- a/course/templates/course/_enroll_link.html
+++ b/course/templates/course/_enroll_link.html
@@ -2,13 +2,13 @@
 <div class="price">${{ session.section.fee }}</div>
 <div class="EnrollLink">
   {% if session.user_enrollment.quantity == 1 %}
-  ENROLLED
+  <button class="btn btn-default disabled">ENROLLED</button>
   {% elif session.user_enrollment %}
-  ENROLLED x {{ session.user_enrollment.quantity }}
+  <button class="btn btn-default disabled">ENROLLED x {{ session.user_enrollment.quantity }}</button>
   {% elif session.closed %}
-  {{ session.closed_string }}
+  <button class="btn btn-default disabled">{{ session.closed_string }}</button>
   {% elif session.full %}
-  FULL
+  <button class="btn btn-default disabled">FULL</button>
   {% else %}
   <button class="btn btn-primary add" onclick="addClass({{ session.id }});">
     {% if session.in_progress %}In Progress{% else %}Enroll{% endif %}</button>
@@ -29,11 +29,12 @@
 <div class="price">FREE</div>
 <div class="RsvpLink{% if session.user_enrollment %} attending{% endif %}">
   {% if session.archived %}
-  CLOSED
+  <button class="btn btn-default disabled">CLOSED</button>
   {% elif request.user %}
-  <div class="is_full">FULL</div>
-  <div class="number_attending unrsvp">RSVP'd x {{ session.user_enrollment.quantity }}</div>
-  <div class="rsvp">Not Attending</div>
+  <button class="btn btn-default disabled is_full">FULL</button>
+  <button class="btn btn-default disabled number_attending unrsvp">
+    RSVP'd x {{ session.user_enrollment.quantity }}</button>
+  <button class="btn btn-default disabled rsvp">Not Attending</button>
   <button class="btn btn-success rsvp" onclick="rsvp({{ session.id }},'{{ session.get_rsvp_url }}');">
     RSVP</button>
   <button class="btn btn-success unrsvp not_full" title="Bring a friend!"
