--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -15,6 +15,7 @@
   position: absolute;
   top: 5px;
   width: @pictureWidth;
+  z-index: 1;
 }
 
 .course .details {
@@ -55,6 +56,7 @@
   text-align: center;
   top: 5px;
   width: @cartWidth;
+  z-index: 1;
   .price { font-size: 25px; }
   .EnrollLink {
     bottom: 0;
