--- a/txrx/static/less/home.less
+++ b/txrx/static/less/home.less
@@ -20,18 +20,19 @@
   .title {
     background: #222;
     background: rgba(32,32,32,0.8);
-    bottom: -50px;
     color: white;
+    display: none;
+    height: 100%;
     left: 0;
-    opacity: 0;
     padding: 3px 5px 3px;
     position: absolute;
+    top: 0;
     width: 100%;
     .author { font-size: 0.8em; }
   }
   &:hover {
     z-index: 1;
-    .title { bottom: 0; opacity: 1; .transition(bottom 0.25s linear); }
+    .title { display: block; }
   }
 }
 
