--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -23,8 +23,16 @@ section { padding-bottom: 25px; }
   nav li { border-bottom: 1px solid rgba(0,0,0,0.1); }
   nav > ul > li { border-top: 1px solid rgba(0,0,0,0.1); }
 }
+.navbar-nav > li.current a:after {
+  background: #ecedee;
+  content: "";
+  display: block;
+  height: 3px;
+  width: 100%;
+}
+
 /* txrx overrides */
-body { color: #424242; margin: 0 auto 50px; max-width: 1400px; overflow: scroll; }
+body { margin: 0 auto 50px; max-width: 1400px; }
 html, body { overflow-x: hidden; }
 #wrap { margin: 0 55px; }
 @media (max-width: @screen-sm-max) { #wrap { margin: 0 20px; } }
@@ -34,11 +42,21 @@ header, #main {
   padding: 0 15px;
 }
 
+h1 { font-size: 24px; line-height: 24px; }
+
 h1.page_title {
   border-bottom: 2px solid;
   line-height: 37px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   padding-right: 120px;
+  position: relative;
+  .calendar_widget {
+    font-size: 24px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    a { color: inherit; }
+  }
 }
 
 h3.block_title {
@@ -380,12 +398,13 @@ h3.date {
     .floatingBox;
     display:none;
     font-size: 14px;
-    left: 0;
+    left: -300px;
     min-height: 0;
     overflow: hidden;
     padding: 10px;
     top: 100%;
     width: 600px;
+    ul { padding: 0; }
   }
   .header {
     border-bottom: 1px solid black;
@@ -567,3 +586,5 @@ h2.section_title {
 
 p.error { color: red; } /* currently only used on login form */
 ul.errorlist { color: red; }
+
+.btn.disabled { color: @gray-light; }
