home page thingy cover over

--- a/txrx/static/less/bootstrap/less/variables.less
+++ b/txrx/static/less/bootstrap/less/variables.less
@@ -8,7 +8,7 @@
 //## Gray and brand colors for use across Bootstrap.
 
 @gray-darker:            lighten(#000, 13.5%); // #222
-@gray-dark:              #424242;
+@gray-dark:              #3b3b3c;
 @gray:                   lighten(#000, 33.5%); // #555
 @gray-light:             lighten(#000, 60%);   // #999
 @gray-lighter:           lighten(#000, 93.5%); // #eee
